<?xml version="1.0"?>
<package>
    <name>camera_base</name>
    <version>0.0.2</version>
    <description>The camera_base package</description>

    <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>camera_info_manager</build_depend>
    <build_depend>diagnostic_updater</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <run_depend>camera_info_manager</run_depend>
    <run_depend>diagnostic_updater</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
</package>
