<?xml version="1.0"?>
<package format="2">
  <name>gnss_driver</name>
  <version>0.0.1</version>
  <description>The gnss_driver package</description>

  <maintainer email="Navi@todo.todo">Navi+</maintainer>
  <license>Navi+</license>
  <author email="HGJ@todo.com">Navi+</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>xsens_imu_driver</build_depend>

  <build_export_depend>xsens_imu_driver</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>xsens_imu_driver</exec_depend>


</package>
